--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
             "package-key": "Noerdisch.ElasticLog"
         },
         "applied-flow-migrations": [
-            "TYPO3.FLOW3-201201261636"
+            "TYPO3.FLOW3-201201261636",
+            "TYPO3.Fluid-201205031303"
         ]
     }
 }
